crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__string_expr.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: "expr(\"Hello, World!\")"
---
Token(
    STRING@0..15 "\"Hello, World!\"",
)
