crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__ternary_expr.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: "expr(condition ? truthy : falsy)"
---
Node(
    TERNARY_EXPR@0..26
      LOOKUP_EXPR@0..9
        IDENT@0..9 "condition"
      WHITESPACE@9..10 " "
      QUESTION_MARK@10..11 "?"
      LOOKUP_EXPR@11..18
        WHITESPACE@11..12 " "
        IDENT@12..18 "truthy"
      WHITESPACE@18..19 " "
      COLON@19..20 ":"
      LOOKUP_EXPR@20..26
        WHITESPACE@20..21 " "
        IDENT@21..26 "falsy"
    ,
)
