crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__true_expr.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(true)
---
Node(
    TRUE_KW@0..4
      TRUE_KW@0..4 "true"
    ,
)
