crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__undef_expr.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(undef)
---
Token(
    UNDEF_KW@0..5 "undef",
)
