crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__variable_lookup.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(x)
---
Token(
    IDENT@0..1 "x",
)
